--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,31 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* PriceInput */
+.price-input-group {
+  width: 360px !important;
+}
+
+.price-input-text {
+  font-size: 10px !important;
+}
+
+.price-input-text-bottom-right {
+  width: 100%;
+  text-align: right;
+}
+
+.price-input-label {
+  font-size: 14px;
+  color: gray;
+}
+
+/* ErrorMessage */
+.input-error {
+  border-radius: 5px;
+  border: none;
+  background-color: rgb(255, 217, 223);
+  color: #d9534f;
+  padding: .3rem;
+}
