--- a/src/index.css
+++ b/src/index.css
@@ -12,23 +12,31 @@ code {
     monospace;
 }
 
-/* PriceInput */
-.price-input-group {
+/* Input */
+input {
+  min-width: 290px !important;
+}
+
+.settings-input-group {
   width: 360px !important;
 }
 
-.price-input-text {
+.input-text {
   font-size: 10px !important;
 }
 
-.price-input-text-bottom-right {
+.input-text-bottom-right {
   width: 100%;
   text-align: right;
 }
 
-.price-input-label {
+.input-label {
   font-size: 14px;
   color: gray;
+}
+
+.form-select {
+  min-width: 150px !important;
 }
 
 /* ErrorMessage */
